@@ -2,6 +2,7 @@ import sys
 import types
 
 import unittest2
+import unittest2 as unittest
 from unittest2 import util
 
 
@@ -815,6 +816,22 @@ class Test_TestLoader(unittest2.TestCase):
         self.assertIsInstance(suite, loader.suiteClass)
 
         ref_suite = unittest2.TestSuite([MyTestCase('test')])
+        self.assertEqual(list(suite), [ref_suite])
+
+    # #14971: Make sure the dotted name resolution works even if the actual
+    # function doesn't have the same name as is used to find it.
+    def test_loadTestsFromName__function_with_different_name_than_method(self):
+        # lambdas have the name '<lambda>'.
+        m = types.ModuleType('m')
+        class MyTestCase(unittest.TestCase):
+            test = lambda: 1
+        m.testcase_1 = MyTestCase
+
+        loader = unittest.TestLoader()
+        suite = loader.loadTestsFromNames(['testcase_1.test'], m)
+        self.assertIsInstance(suite, loader.suiteClass)
+
+        ref_suite = unittest.TestSuite([MyTestCase('test')])
         self.assertEqual(list(suite), [ref_suite])
 
     # "The specifier name is a ``dotted name'' that may resolve ... to ... a
